# URL

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
requirements/: base.txt  dev.txt  test.txt
src/url_analyzer/: __init__.py
src/url_analyzer/analyzers/: dns_analyzer.py
src/url_analyzer/cli/: main.py
src/url_analyzer/core/: base_analyzer.py  base_analyzer_interface.py  main_analyzer.py  url_analyzer.py
src/url_analyzer/utils/: exceptions.py
tests/: conftest.py
tests/unit/: test_basic.py
tests/unit/analyzers/: test_dns_analyzer.py
tests/unit/cli/: test_cli.py
tests/unit/core/: test_base_analyzer.py  test_main_analyzer.py  test_url_analyzer.py
